feat(ChatGUI): alteration design. feat(MainGUI): alteration design.