@@ -1,9 +1,7 @@
 package meuapp.service;
 
-import java.io.BufferedReader;
-import java.io.IOException;
-import java.io.InputStreamReader;
 import java.util.ArrayList;
+import java.io.*;
 
 import org.json.JSONArray;
 import org.json.JSONObject;
@@ -25,45 +23,32 @@ public class ChooseLLMService {
     }
 
     public void commandOne(String command) throws IOException, InterruptedException {
-        ProcessBuilder builder = new ProcessBuilder(command.split("\\s+"));
-        Process process = builder.start();
 
-        try (BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()))) {
-            String line;
-            while ((line = reader.readLine()) != null) {
-                this.listJson.add(line);
-            }
-        }
-
+        Process process = Runtime.getRuntime().exec(command);
         process.waitFor();
+
+        BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
+        String line;
+        while ((line = reader.readLine()) != null) {
+            this.listJson.add(line);
+        }
+        reader.close();
     }
 
     public void commandTwo(String selectedLLM) throws IOException, InterruptedException {
         this.schemaSelected = selectedLLM;
-        ProcessBuilder builder = new ProcessBuilder((COMMAND_LOAD_MODEL + " " + this.schemaSelected).split("\\s+"));
-        Process process = builder.start();
-
-        try (BufferedReader input = new BufferedReader(new InputStreamReader(process.getInputStream()))) {
-            while ((input.readLine()) != null) {
-            }
-        }
-
+        Process process = Runtime.getRuntime().exec(COMMAND_LOAD_MODEL + " "+ this.schemaSelected);
         process.waitFor();
     }
 
     public void commandThree() throws IOException, InterruptedException {
-        ProcessBuilder builder = new ProcessBuilder((COMMAND_UNLOAD_MODEL + " " + this.schemaSelected).split("\\s+"));
-        Process process = builder.start();
-
-        try (BufferedReader input = new BufferedReader(new InputStreamReader(process.getInputStream()))) {
-            while ((input.readLine()) != null) {
-            }
-        }
-
+        Process process = Runtime.getRuntime().exec(COMMAND_UNLOAD_MODEL + " "+ this.schemaSelected);
         process.waitFor();
     }
 
-    public void nameModel(ArrayList<String> listJson) {
+
+
+    public void nameModel(ArrayList<String> listJson)  {
         for (String result : listJson) {
             JSONArray jsonArray = new JSONArray(result);
             for (int i = 0; i < jsonArray.length(); i++) {
@@ -73,7 +58,12 @@ public class ChooseLLMService {
         }
     }
 
+
+
+
+
     public ArrayList<String> getListModels() {
         return listModels;
     }
+
 }
